--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .image-styling{
-  width: 300px !important;
+  width: 350px !important;
   height: 200px;
 }
 
@@ -75,4 +75,8 @@ body {
   .topnav input[type=text] {
     border: 1px solid #ccc;  
   }
+}
+
+.Popular{
+text-align:center;
 }
